log
Wed 24 Apr 2024 05:55:27 PM UTC: 
 hashmap.c | 38 +++++++++++++++++++++++++++++++++-----
 1 file changed, 33 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:71:10: error: unused variable ‘newArray’ [-Werror=unused-variable]
   71 |   Pair** newArray = (Pair**)malloc(newCapacity * sizeof(Pair**));
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
50feaef
Wed 24 Apr 2024 05:56:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8c9474f
Wed 24 Apr 2024 06:03:07 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|0
9fe68fa
Wed 24 Apr 2024 06:06:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f6141e7
Wed 24 Apr 2024 06:08:52 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
4592e4a
Wed 24 Apr 2024 06:10:29 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
eb7c94f
Wed 24 Apr 2024 06:14:56 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 40/70
5013ca5
Wed 24 Apr 2024 06:15:15 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|3
total_score: 40/70
7289973
Wed 24 Apr 2024 06:18:15 PM UTC: 
 hashmap.c | 15 ++++++++++-----
 1 file changed, 10 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 40/70
7e08732
Wed 24 Apr 2024 06:20:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:116:3: error: expected ‘,’ or ‘;’ before ‘if’
  116 |   if (map->buckets[pos]->key == key){
      |   ^~
hashmap.c:115:7: error: unused variable ‘pos’ [-Werror=unused-variable]
  115 |   int pos = get_valid_location(map, key)
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
30d158e
Wed 24 Apr 2024 06:20:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7e4bf0c
